--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -36,7 +36,8 @@
     "import matplotlib.pyplot as plt\n",
     "from collections import OrderedDict\n",
     "from PIL import Image\n",
-    "import os, random\n",
+    "import os, random, json\n",
+    "from datetime import datetime\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -122,8 +123,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "with open('cat_to_name.json', 'r') as f:\n",
     "    cat_to_name = json.load(f)"
    ]
@@ -328,7 +327,6 @@
    "outputs": [],
    "source": [
     "# TODO: Save the checkpoint\n",
-    "from datetime import datetime\n",
     "curr_timestamp = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
     "checkpoint = {'classifier' : classifier,\n",
     "              'batch_size': batch_size,\n",
@@ -423,11 +421,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_image(image):\n",
+    "def process_image_old(image):\n",
+    "    # Note for the reviewer: this is the function I previously submitted\n",
     "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
     "        returns an Numpy array\n",
     "    '''\n",
-    "    # TODO: Process a PIL image for use in a PyTorch model\n",
     "    # Using the same pre-processing done earlier\n",
     "    img_size = 224\n",
     "    _mean = [0.485, 0.456, 0.406]\n",
@@ -438,6 +436,41 @@
     "                                          transforms.Normalize(_mean, _std)])\n",
     "    \n",
     "    return transformations(Image.open(image))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_image(image):\n",
+    "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
+    "        returns an Numpy array\n",
+    "    '''\n",
+    "    img_size = 224\n",
+    "    _mean = [0.485, 0.456, 0.406]\n",
+    "    _std = [0.229, 0.224, 0.225]\n",
+    "\n",
+    "    image = Image.open(select_random_pic('valid'))\n",
+    "\n",
+    "    # Find ratio between larger and smaller side\n",
+    "    ratio = image.size[1] / image.size[0]\n",
+    "\n",
+    "    # Resize smaller side to 256 and larger side to 256* ratio\n",
+    "    image = image.resize((img_size, int(ratio*256)))\n",
+    "\n",
+    "    # Crop image so that it's centered and 224x224\n",
+    "    image = image.crop((0,0,224,224))\n",
+    "\n",
+    "    # Convert to numpy array\n",
+    "    np_image = np.array(image)/255\n",
+    "\n",
+    "    # Normalize\n",
+    "    norm_image = (np_image - _mean) / _std\n",
+    "    norm_image = norm_image.transpose((2, 0, 1))\n",
+    "    \n",
+    "    return torch.from_numpy(norm_image)"
    ]
   },
   {
